# time-machine

./: .clang-format  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  HISTORY.rst  LICENSE  MANIFEST.in  README.rst  _tachyongun.c  build-wheels.sh  pyproject.toml  pytest.ini  setup.cfg  setup.py  tachyongun.py  tox.ini  Машина времени.docx
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: issue.yml
.github/workflows/: build.yml  main.yml
docs/: changelog.rst  comparison.rst  conf.py  index.rst  installation.rst  migration.rst  pytest_plugin.rst  usage.rst
requirements/: compile.py  py310.txt  py311.txt  py312.txt  py313.txt  py35.txt  py36.txt  py37.txt  py38.txt  py39.txt  requirements.in
src/: _tachyon_gun.c  _time_machine.c  tachyon_gun.py  time_machine.py
src/time_machine/: __init__.py  cli.py
tests/: backports.py  conftest.py  test_cli.py  test_tachyon_gun.py  test_time_machine.py
tests/requirements/: py310.txt  py311.txt  py312.txt  py313.txt  py38.txt  py39.txt
