[metadata]
name = time-machine
version = 1.3.0
description = Travel through time in your tests.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Adam Johnson
author_email = me@adamj.eu
url = https://github.com/adamchainz/time-machine
project_urls =
    Changelog = https://github.com/adamchainz/time-machine/blob/master/HISTORY.rst
    Twitter = https://twitter.com/adamchainz
license = MIT
keywords = time, warp
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
license_file = LICENSE

[options]
package_dir=
    =src
py_modules = time_machine
include_package_data = True
install_requires =
    python-dateutil
python_requires = >=3.6
zip_safe = False

[coverage:run]
branch = True
include = */time_machine.py

[coverage:paths]
source =
   src
   .tox/*/site-packages

[coverage:report]
show_missing = True

[flake8]
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E501,W503
