[metadata]
name = time_machine
version = 2.10.0
description = Travel through time in your tests.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/adamchainz/time-machine
author = Adam Johnson
author_email = me@adamj.eu
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Typing :: Typed
keywords = time, warp, date, datetime, mock, test, tests, testing
project_urls =
    Changelog = https://github.com/adamchainz/time-machine/blob/main/CHANGELOG.rst
    Mastodon = https://fosstodon.org/@adamchainz
    Twitter = https://twitter.com/adamchainz

[options]
packages = find:
install_requires =
    python-dateutil
python_requires = >=3.7
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
pytest11 =
    time_machine = time_machine

[coverage:run]
branch = True
parallel = True
source =
    time_machine
    tests

[coverage:paths]
source =
    src
    .tox/**/site-packages

[coverage:report]
show_missing = True

[flake8]
max-line-length = 88
extend-ignore = E203
